# pstack

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.rej  INSTALL.md  LICENSE  Makefile  README.md  README.txt  TODO  aarch64.cc  arch.cc  canal.cc  context.cc  core.cc  ctypes.cc  dead.cc  dump.cc  dump.h  dwarf.c  dwarf.cc  dwarf.h  dwarf_cache.cc  dwarf_die.cc  dwarf_frame.cc  dwarf_frame.tcc  dwarf_info.cc  dwarf_lines.cc  dwarf_macros.cc  dwarf_pubnames.cc  dwarf_reader.cc  dwarf_unit.cc  dwarfdump.cc  dwarfdump.h  dwarfproc.cc  elf.c  elf.cc  elfinfo.h  ex.h  flags.cc  (+46 more)
.github/workflows/: c-cpp.yml  codeql-analysis.yml
docker/: .gitignore  build.sh
docker/alma9-with-py3/: Dockerfile
docker/centos/: Dockerfile
docker/full-32bit/: Dockerfile
docker/full-64bit/: Dockerfile
docker/min-32bit/: Dockerfile
docker/sandbox32/: Dockerfile
docker/ubuntu/: Dockerfile
dwarf/: access.h  archreg.h  attr.h  forms.h  line_e.h  line_s.h  ops.h  tags.h  visibility.h
dwarf/CVS/: Entries  Repository  Root
libpstack/: arch-aarch64.h  arch-i386.h  arch-x86_64.h  arch.h  archreg.h  context.h  dump.h  dwarf.h  dwarf.h.orig  dwarf.h.rej  dwarf_reader.h  dwarfproc.h  elf.h  exception.h  flags.h  fs.h  global.h  imagecache.h  inflatereader.h  ioflag.h  json.h  lzmareader.h  proc.h  procdump.h  ps_callback.h  pyrdb.h  python.h  reader.h  stringify.h  threaddb.h  util.h  util.h~
libpstack/dwarf/: archreg.h  attr.h  calling.h  case.h  cfainsns.h  discriminant.h  ehpe.h  encodings.h  forms.h  inline.h  line_ct.h  line_e.h  line_s.h  lle.h  macinfo.h  macro.h  ops.h  rle.h  tags.h  unittype.h
libpstack/elf/: aux.h  auxv.h  dyntag.h  sectype.h
pstack/: dump.h  dwarf.h  ex.h  proc.h  util.h
pstack/dwarf/: languages.h  line_s.h  ops.h  order.h  tags.h  virtuality.h
t/: Makefile  cmake_install.cmake  compile_commands.json
tests/: .gitignore  CMakeLists.txt  Makefile  abort.c  args-test.py  args.cc  asserttext-test.py  asserttext.cc  badfp-test.py  badfp.c  badfp.s  basic-test.py  basic.c  basic.s  coremonitor.py  cpp-test.py  cpp.cc  dump-test.py  inline.c  json.cc  noreturn-ext.c  noreturn-test.py  noreturn.c  noreturn.h  procself.cc  pstack.py  pydict_test.py  python-test.py  python_path_test.cc  segv-test.py  segv.c  segvrt.c  suspend.cc  thread  thread-test.py  thread.cc
